Style corrections for mobile - body overflow

--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -3,6 +3,7 @@ body{
 	font-family:$font-family;
 	color:$off-white;
 	height:auto !important;
+	overflow:visible !important;
 }
 
 img{
